--- a/src/main/resources/templates/accreditamento/accreditamentoRiassegnaAccountValutazione.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoRiassegnaAccountValutazione.html
@@ -23,12 +23,12 @@
 										<div class="modal-body">
 											<form id="form" method="post" th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}" >
 												<div class="item form-group modalAlert">
-												  <h4 th:text="#{label.conferma_riassegna}"></h4>	
+												  <h4 th:text="#{label.conferma_riassegna}"></h4>
 												</div>
 											</form>
 										</div>
 										<div class="modal-footer">
-											<button type="button" class="btn btn-default" data-dismiss="modal">Cancela</button>
+											<button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{label.annulla}">Cancela</button>
 											<label for="submitRiassegnaButton" class="btn btn-success pull-right">Conferma</label>
 										</div>
 									</div>
@@ -37,10 +37,10 @@
 						</div>
 						<div class="clearfix"></div>
 					</div>
-				</div>		
+				</div>
 			</div>
 		</div>
-		
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -48,8 +48,8 @@
 						<h2 th:text="#{label.riassegnaAccountValutazione}"></h2>
 						<div class="clearfix"></div>
 					</div>
-					
-					<!-- Info del accreditamento -->	
+
+					<!-- Info del accreditamento -->
 					<div class="x_content">
 						<table id="InfoAccreditamento" class="table table-striped table-bordered dt-responsive nowrap" style="width: 100%">
 								<h4 th:text="#{label.info_accreditamento}"></h4>
@@ -64,11 +64,11 @@
 								</thead>
 								<tbody th:remove="all-but-first">
 							 	 <tr>
-									 <td th:text="${accreditamentoId}"></td>  	
-									 <td th:text="${accreditamento.tipoDomanda.nome}"></td> 
-									 <td th:text="${accreditamento.stato.nome}"></td> 
+									 <td th:text="${accreditamentoId}"></td>
+									 <td th:text="${accreditamento.tipoDomanda.nome}"></td>
+									 <td th:text="${accreditamento.stato.nome}"></td>
 									 <td th:text="${accreditamento.workflowInCorso?.tipo}"></td>
-									 <td> 
+									 <td>
 									 	<form id="selection" method='post' th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}" enctype="multipart/form-data">
 										 <select id="segreteria" class="selectpicker required"
 											data-width="100%"
@@ -81,7 +81,7 @@
 											<input id="submitRiassegnaButton" class="btn btn-primary" name="submitRiassegna" type="submit" style="display: none;"/>
 										</form>
 									</td>
-								</tr> 
+								</tr>
 							  </tbody>
 						</table>
 					</div>
