13898 - Duplicazione ruolo Coordinatore da eliminare per FSC Modifica etichette e tooltip

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1524,3 +1524,12 @@ table.dataTable tbody tr.selected {
 {
 	word-break: keep-all !important;
 }
+
+.warning {
+  color: #999 !important;
+  background-color: #dddd52 !important;
+}
+
+.warning::after {
+  border-top: 7px solid #dddd52 !important;
+}
