--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -1065,6 +1065,19 @@
 										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.crediti')}__}"></div>
 									</div>
 
+									<!-- MOTIVAZIONE CREDITI FORMATIVI INSERITI DALL'UTENTE -->
+									<div class="item form-group motivazione-crediti" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.motivazioneCrediti')} ? 'bad'">
+										<div class="col-xs-1"></div>
+										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="motivazioneCrediti">
+											<span th:text="#{label.crediti_formativi_attribuiti_utente_motivazione}">Motivazione Crediti attribuiti all'evento dall'utente</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="motivazioneCrediti">
+											<textarea rows="10" class="form-control motivazioneCrediti" th:field="${eventoWrapper.evento.motivazioneCrediti}" th:disabled="${isRiedizione or isEditSemiBloccato}"></textarea>
+										</div>
+										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.motivazioneCrediti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.motivazioneCrediti')}__}"></div>
+									</div>
+
 								<div class="divider-dashed"></div>
 
 								<!-- VERIFICA PRESENZA PARTECIPANTI -->
@@ -1636,11 +1649,13 @@
 						reInitDataTableById('responsabiliScientifici');
 						setEspertiCoordinatori();
 						mostraFlagCalcoloCrediti();
+						abilitaDisabilitaMotivazioneCreditiInseritiUtente();
 					});
 					$('#dataInizio').on('change', setEvResTipologiaSperimentazione);
 					$('#dataInizio').on('change', reInitDataTableById('responsabiliScientifici'));
 					$('#dataInizio').on('change', setEspertiCoordinatori);
 					$('#dataInizio').on('change', mostraFlagCalcoloCrediti);
+					$('#dataInizio').on('change', abilitaDisabilitaMotivazioneCreditiInseritiUtente);
 
 					//non funziona
 					//$('#sperimentazioneClinicaSiId, #sperimentazioneClinicaNoId').on('change', setEvResOttenutoComitatoEtico);
@@ -1687,6 +1702,8 @@
 							reInitDataTableById('investigatori');
 						//}
 					//}
+					$('.crediti-proposti').on('keyup', abilitaDisabilitaMotivazioneCreditiInseritiUtente);
+					$('.crediti-proposti').on('change', abilitaDisabilitaMotivazioneCreditiInseritiUtente);
 				}
 
 
@@ -1842,8 +1859,30 @@
 							$(".crediti-proposti").prop("disabled", false);
 						}
 					}
+					abilitaDisabilitaMotivazioneCreditiInseritiUtente();
 				}
 
+				function abilitaDisabilitaMotivazioneCreditiInseritiUtente() {
+					//console.log('abilitaDisabilitaMotivazioneCreditiInseritiUtente: ' + $(".crediti-proposti").val());
+					var versione = getVersione();
+					if (versione === 2) {
+						if($(".crediti-proposti").val() == '') {
+							//campo crediti-proposti compilato
+							$(".motivazione-crediti").slideUp("fast");
+							//$(".motivazione-crediti").hide();
+							$(".motivazioneCrediti").val('');
+						}
+						else {
+							//value false crediti inseriti dal provider
+							$(".motivazione-crediti").slideDown("slow");
+						}
+					} else {
+						$(".motivazione-crediti").slideUp("fast");
+						//$(".motivazione-crediti").hide();
+						$(".motivazioneCrediti").val('');
+					}
+				}
+				
 		/* 		function updateSelectRuoliOre(){
 					var val = $('#tipologiaEventoId').selectpicker('val');
 					var ruoliOrePicker_ref ='#addRuoloOreFSC-ruolo';
