#14010 - Diversa visualizzazione eventi in PFA se a scavalco

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1524,3 +1524,8 @@ table.dataTable tbody tr.selected {
 {
 	word-break: keep-all !important;
 }
+
+.yellowRow
+{
+	background-color: yellow !important;
+}
